--- a/smk-edit/static/components/display-item.html
+++ b/smk-edit/static/components/display-item.html
@@ -22,6 +22,7 @@
     <div class="display-collection" v-if="item.items">
         <display-item
             v-for="item in item.items"
+            v-if="item.id"
             v-bind:item="item"
             v-bind:key="item.id"
             v-bind:selectedIds="selectedIds"
